05-players/player03/01-namespace.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: ns-player03
#  labels:
#     app: players
     
apiVersion: v1
kind: Namespace
metadata:
  name: ns-target
  labels:
    app: target
