05-players/player03/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-player03
  labels:
     app: players
