05-players/player03/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-target
  namespace: ns-target
  labels:
    app: target
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: target
    spec:
      containers:
      - name: python-example
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-target
  namespace: ns-target
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: target

#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: deploy-player03
#  namespace: ns-player03
#  labels:
#    app: player03
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      app: player03
#  strategy:
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 1
#  minReadySeconds: 5
#  template:
#    metadata:
#      labels:
#        app: player03
#    spec:
#      containers:
#      - name: web-example
#        image: stefanprodan/podinfo
#        ports:
#        - containerPort: 9898
#        resources:
#          requests:
#            cpu: 100m
#          limits:
#            cpu: 100m
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: svc-player03
#  namespace: ns-player03
#spec:
#  type: ClusterIP
#  ports:
#    - name: http
#      protocol: TCP
#      port: 80
#      targetPort: 9898
#  selector:
#    app: player03
