05-players/player03/04-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: Test_Policy_Player03
  namespace: ns-player03
spec:
  podSelector:
    matchLabels:
      app: target
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: monitoring
      namespaceSelector:
          matchLabels:
            "kubernetes.io/metadata.name:default"
    - namespaceSelector:
         matchLabels:
          app: players
    #ports:
    #- protocol: TCP
    #  port: 80
