05-players/player03/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: player03-microseg
spec:
  podSelector:
    matchLabels:
      app: player03
  ingress:
   - from : 
      - namespaceSelector:
         matchLabels:
          app: players
      - namespaceSelector: 
        matchLabels:
          'kubernetes.io/metadata.name': default
